Fixed grid gap on main page

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -12,12 +12,11 @@
     #portrait {border: 1px var(--textColor1) solid; grid-column: 4/-1;}
     #portrait img {width: 14em; height: 14em;}
 
-    #repos {grid-column: 1/3; display: grid; grid-template-rows: auto repeat(4, auto); grid-gap: var(--gridGap); 
+    #repos {grid-column: 1/3; display: grid; grid-template-rows: auto repeat(4, auto); grid-gap: 0.75em; 
     border: 1px var(--textColor1) solid; background: var(--mainColor); padding: 0 0.75em 0.75em 0.75em;}
 
     .repo {display: grid; text-align: left; grid-template-rows: auto auto auto; grid-template-columns: auto auto;
     margin-bottom: 0; padding: 0; border: 1px var(--textColor1) solid;}
-
     .repo p {margin: .15em; padding: .1em;}
     .repo a {margin: .15em; padding: .1em; text-decoration: none; color: var(--textColor1);}
     .repoLang {justify-self: start;}
